# liblogicalaccess-libnfc

./: .gitignore  CMakeLists.txt  Jenkinsfile  LICENSE.LibLogicalAccess-LibNFC.txt  README.md  appveyor.yml  assembly.xml  conanfile.py  pom.xml  version.cmake
cmake/: FindLibNFC.cmake
plugins/logicalaccess/plugins/readers/nfc/: CMakeLists.txt  libraryentry.cpp  nfcdatatransport.cpp  nfcdatatransport.hpp  nfcreaderprovider.cpp  nfcreaderprovider.hpp  nfcreaderunit.cpp  nfcreaderunit.hpp  nfcreaderunitconfiguration.cpp  nfcreaderunitconfiguration.hpp
plugins/logicalaccess/plugins/readers/nfc/commands/: mifareclassicuidchangerservice.cpp  mifareclassicuidchangerservice.hpp  mifarenfccommands.cpp  mifarenfccommands.hpp
plugins/logicalaccess/plugins/readers/nfc/readercardadapters/: nfcreadercardadapter.cpp  nfcreadercardadapter.hpp
plugins/pluginsreaderproviders/: CMakeLists.txt
plugins/pluginsreaderproviders/libnfc/: CMakeLists.txt  libnfcreaderprovider.cpp  libnfcreaderprovider.hpp  libnfcreaderunit.cpp  libnfcreaderunit.hpp  libnfcreaderunitconfiguration.cpp  libnfcreaderunitconfiguration.hpp  libraryentry.cpp
plugins/pluginsreaderproviders/libnfc/readercardadapters/: libnfcdatatransport.cpp  libnfcdatatransport.hpp  libnfcreadercardadapter.cpp  libnfcreadercardadapter.hpp
plugins/pluginsreaderproviders/nfc/: CMakeLists.txt  libraryentry.cpp  nfcdatatransport.cpp  nfcdatatransport.hpp  nfcreaderprovider.cpp  nfcreaderprovider.hpp  nfcreaderunit.cpp  nfcreaderunit.hpp  nfcreaderunitconfiguration.cpp  nfcreaderunitconfiguration.hpp
plugins/pluginsreaderproviders/nfc/commands/: mifareclassicuidchangerservice.cpp  mifareclassicuidchangerservice.hpp  mifarenfccommands.cpp  mifarenfccommands.hpp
plugins/pluginsreaderproviders/nfc/readercardadapters/: nfcreadercardadapter.cpp  nfcreadercardadapter.hpp
scripts/: deploy-pdb.bat  formatting.sh
scripts/debian/: git-buildpackage.sh
tests/: CMakeLists.txt
tests/mifare/: CMakeLists.txt  test_change_uid.cpp
vc++/: resource.rc
